html content filled in

--- a/index.html
+++ b/index.html
@@ -1,63 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css" />
-    <title>Portfolio - Katie Butler</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/style.css" />
+        <title>Portfolio - Katie Butler</title>
+    </head>
 
-<body>
-    <!-- navigation -->
-    <header>
-        <h1>
-            <a href="/">Katie Butler</a>
-        </h1>
-        <nav>
-            <!-- Unordered list element -->
-            <ul>
-                <!-- List item element -->
-                <li>
-                    <!-- Anchor element -->
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a href="#resume">Resume</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <!-- navigation -->
+        <header>
+            <h1>
+                <a href="/">Katie Butler</a>
+            </h1>
+            <nav>
+                <!-- Unordered list element -->
+                <ul>
+                    <!-- List item element -->
+                    <li>
+                        <!-- Anchor element -->
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="./assets/Katie Resume May 9 2022.pdf">Resume</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    <!-- hero/jumnbotron -->
-    <section class="hero">
-        <div class="hero-hook">
-            <h2>Design and Functionality</h2>
-            <p>
-                Web development that creates easy and exciting user experiences.
-            </p>
-        </div>
-    </section>
+        <!-- hero/jumnbotron -->
+        <section class="hero">
+            <div class="hero-hook">
+                <h2>Design and Functionality</h2>
+                <p>
+                    Web design and development for easy, exciting and aesthetically pleasing user experiences.
+                </p>
+            </div>
+        </section>
 
-    <div id="about-me">
+        <!-- about me section -->
+        <section id="about-me" class="intro">
+            <h2 class="section-title">About Me</h2>
+            <div class="intro-content">
+                <div class="intro-img">
+                    <img src="./assets/images/profilepic.jpg" alt="Katie Butler's headshot" />
+                </div>
+                <div class="intro-text">
+                    <p>
+                        I am a 22 year-old, recent Health Sciences graduate of Western University. I live in Toronto, working downtown full-time as a floral designer, though I am originally from Windsor, ON. In my spare time, I create acrylic paintings and I am currently working towards a solo exhibition. The desire to enhance my design portfolio and exposure to some limiting template web-design experiences is what first motivated me to learn to code, starting my journey as a full-stack web-developer.
+                    </p>
+                </div>
+            </div>    
+        </section>
 
-    </div>
+        <!-- work section-->
+        <section id="work" class="sites">
+            <h2 class="section-title">Work</h2>
+            <!-- larger site img section-->
+            <div class="site-main">
+                <div class="site-main-img">
+                    <div class="site-main-title">
+                        <h3>sustain.ability</h3>  
+                        <h4>Wix web-design</h4>      
+                    </div>
+                </div> 
+            </div>
+            <!-- smaller site imgs section -->
+            <div class="site-other">
+                <div class="site-img site-img-1">
+                    <div class="site-title">
+                        <h3>Nuit Violette</h3>
+                        <h4>Wix web-design</h4>
+                    </div>
+                </div>    
+                <div class="site-img site-img-2">
+                    <div class="site-title">
+                        <h3>one of your french girls</h3>
+                        <h4>Shopify web-design</h4>
+                    </div>
+                </div>    
+                <div class="site-img site-img-3">
+                    <div class="site-title">
+                        <h3>Run Buddy</h3>
+                        <h4>HTML, CSS web-development</h4>
+                    </div>
+                </div>    
+            </div>
+        </section>
 
-    <div id="work">
-
-    </div>
-
-    <div id="contact">
-
-    </div>
-
-    <div id="resume">
-
-    </div>
-</body>
+        <section id="contact">
+            <h2 class="section-title">Contact</h2>
+            <div class="contact-info">
+                <ul>
+                    <li>
+                        Phone: 226-345-7799
+                    </li>
+                    <li>
+                        Email: <a href="mailto:katiebutler7@gmail.com">katiebutler37@gmail.com</a>
+                    </li>
+                    <li>
+                    GitHub: <a href="https://github.com/katiebutler37">katiebutler37</a>
+                    </li>
+                </ul>
+            </div>
+    </body>
 </html>
