header basic styling complete

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             </div>
         </section>
 
+        <!-- contact section -->
         <section id="contact">
             <h2 class="section-title">Contact</h2>
             <div class="contact-info">
