about me basic formatting complete

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id="about-me" class="intro">
             <h2 class="section-title">About Me</h2>
             <div class="intro-content">
-                <div class="intro-img">
+                <div>
                     <img src="./assets/images/profilepic.jpg" alt="Katie Butler's headshot" />
                 </div>
                 <div class="intro-text">
