CSS condensing in work section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <h2 class="section-title">Work</h2>
             <!-- larger site img section-->
             <div class="site-main">
-                <div class="site-main-img">
-                    <div class="site-main-title">
+                <div class="site-img main-img">
+                    <div class="site-title">
                         <h3>sustain.ability</h3>  
                         <h4>Wix web-design</h4>      
                     </div>
