titles placed on top of images

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <!-- larger site img section-->
             <div class="site-main">
                 <div class="site-img main-img">
+                    <div class="site-title main-title">
+                        <h3>sustain.ability</h3>  
+                        <h4>Wix web-design</h4>      
+                    </div> 
                     <img 
                         src="./assets/images/sustainability.jpg"
                         alt="Dolphins swimming in the ocean." 
                     />
-                    <div class="site-title">
-                        <h3>sustain.ability</h3>  
-                        <h4>Wix web-design</h4>      
-                    </div>   
                 </div> 
             </div>
             <!-- smaller site imgs section -->
