links added to pictures

--- a/index.html
+++ b/index.html
@@ -65,47 +65,55 @@
             <!-- larger site img section-->
             <div class="site-main">
                 <div class="site-img main-img">
-                    <div class="site-title main-title">
-                        <h3>sustain.ability</h3>  
-                        <h4>Wix web-design</h4>      
-                    </div> 
-                    <img 
-                        src="./assets/images/sustainability.jpg"
-                        alt="Dolphins swimming in the ocean." 
-                    />
+                    <a href="https://www.usc-sustain-ability.com/">
+                        <img 
+                            src="./assets/images/sustainability.jpg"
+                            alt="Dolphins swimming in the ocean." 
+                        />
+                        <div class="site-title main-title">
+                            <h3>sustain.ability</h3>  
+                            <h4>Wix web-design</h4>      
+                        </div> 
+                    </a>
                 </div> 
             </div>
             <!-- smaller site imgs section -->
             <div class="site-other">
                 <div class="site-img site-img-1">
-                    <img 
-                        src="./assets/images/nuitviolette.jpg"
-                        alt="A colourful surrealist painting featured in the Nuit Violette online gallery." 
-                    />
-                    <div class="site-title">
-                        <h3>Nuit Violette</h3>
-                        <h4>Wix web-design</h4>
-                    </div>
+                    <a href="https://www.nuitviolette.online/home">
+                        <img 
+                            src="./assets/images/nuitviolette.jpg"
+                            alt="A colourful surrealist painting featured in the Nuit Violette online gallery." 
+                        />
+                        <div class="site-title">
+                            <h3>Nuit Violette</h3>
+                            <h4>Wix web-design</h4>
+                        </div>
+                    </a>    
                 </div>    
                 <div class="site-img site-img-2">
-                    <img 
-                        src="./assets/images/oneofyourfrenchgirls.jpg"
-                        alt="My acyrlic painting of three women titled Trophy Wives." 
-                    />
-                    <div class="site-title">
-                        <h3>one of your french girls</h3>
-                        <h4>Shopify web-design</h4>
-                    </div>
+                    <a href="https://katiebutler.art/">
+                        <img 
+                            src="./assets/images/oneofyourfrenchgirls.jpg"
+                            alt="My acyrlic painting of three women titled Trophy Wives." 
+                        />
+                        <div class="site-title">
+                            <h3>one of your french girls</h3>
+                            <h4>Shopify web-design</h4>
+                        </div>
+                    </a>  
                 </div>    
                 <div class="site-img site-img-3">
-                    <img 
-                        src="./assets/images/runbuddy.jpg"
-                        alt="Runner crounching down to tie their shoe." 
-                    />
-                    <div class="site-title">
-                        <h3>Run Buddy</h3>
-                        <h4>HTML, CSS web-development</h4>
-                    </div>
+                    <a href="https://katiebutler37.github.io/run-buddy/">
+                        <img 
+                            src="./assets/images/runbuddy.jpg"
+                            alt="Runner crounching down to tie their shoe." 
+                        />
+                        <div class="site-title">
+                            <h3>Run Buddy</h3>
+                            <h4>HTML, CSS web-development</h4>
+                        </div>
+                    </a>  
                 </div>    
             </div>
         </section>
