--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <body>
         <!-- navigation -->
         <header>
-            <h1>
-                <a href="/">Katie Butler</a>
-            </h1>
+            <h1>Katie Butler</h1>
             <nav>
                 <!-- Unordered list element -->
                 <ul>
