HTML semantics and CSS comments

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2 class="section-title">Work</h2>
             <!-- larger site img section-->
             <div class="site-main">
-                <div class="site-img main-img">
+                <article class="site-img main-img">
                     <a href="https://www.usc-sustain-ability.com/">
                         <img 
                             src="./assets/images/sustainability.jpg"
@@ -73,11 +73,11 @@
                             <h4>Wix web-design</h4>      
                         </div> 
                     </a>
-                </div> 
+                </article> 
             </div>
             <!-- smaller site imgs section -->
             <div class="site-other">
-                <div class="site-img site-img-1">
+                <article class="site-img site-img-1">
                     <a href="https://www.nuitviolette.online/home">
                         <img 
                             src="./assets/images/nuitviolette.jpg"
@@ -88,8 +88,8 @@
                             <h4>Wix web-design</h4>
                         </div>
                     </a>    
-                </div>    
-                <div class="site-img site-img-2">
+                </article>    
+                <article class="site-img site-img-2">
                     <a href="https://katiebutler.art/">
                         <img 
                             src="./assets/images/oneofyourfrenchgirls.jpg"
@@ -100,8 +100,8 @@
                             <h4>Shopify web-design</h4>
                         </div>
                     </a>  
-                </div>    
-                <div class="site-img site-img-3">
+                </article>    
+                <article class="site-img site-img-3">
                     <a href="https://katiebutler37.github.io/run-buddy/">
                         <img 
                             src="./assets/images/runbuddy.jpg"
@@ -112,7 +112,7 @@
                             <h4>HTML, CSS web-development</h4>
                         </div>
                     </a>  
-                </div>    
+                </article>    
             </div>
         </section>
 
@@ -132,5 +132,6 @@
                     </li>
                 </ul>
             </div>
+        </section>    
     </body>
 </html>
