swapped out run buddy placeholder for original application READirect

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                     </a>  
                 </article>    
                 <article class="site-img site-img-3">
-                    <a href="https://katiebutler37.github.io/run-buddy/">
+                    <a href="https://katiebutler37.github.io/readirect/">
                         <img 
-                            src="./assets/images/runbuddy.jpg"
-                            alt="Runner crounching down to tie their shoe." 
+                            src="./assets/images/glowup.gif"
+                            alt="The READirect main page in action." 
                         />
                         <div class="site-title">
-                            <h3>Run Buddy</h3>
-                            <h4>HTML, CSS web-development</h4>
+                            <h3>READirect</h3>
+                            <h4>HTML, CSS, JS web-development</h4>
                         </div>
                     </a>  
                 </article>    
