--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <article class="site-img site-img-3">
                     <a href="https://katiebutler37.github.io/readirect/">
                         <img 
-                            src="./assets/images/glowup.gif"
+                            src="./assets/images/demo.gif"
                             alt="The READirect main page in action." 
                         />
                         <div class="site-title">
