--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             <!-- smaller site imgs section -->
             <div class="site-other">
                 <article class="site-img site-img-1">
-                    <a href="https://www.nuitviolette.online/home">
+                    <a href="https://ibetter.herokuapp.com/login">
                         <img 
-                            src="./assets/images/nuitviolette.jpg"
-                            alt="A colourful surrealist painting featured in the Nuit Violette online gallery." 
+                            src="./assets/images/iBetter.png"
+                            alt="The iBetter application 'My Habits' page where you create new tasks." 
                         />
                         <div class="site-title">
-                            <h3>Nuit Violette</h3>
-                            <h4>Wix web-design</h4>
+                            <h3>iBetter</h3>
+                            <h4>Full-stack web development</h4>
                         </div>
                     </a>    
                 </article>    
